# ai-in-dentistry

./: .env.example  .gitignore  AI in Dentistry - Final Analysis.ipynb  CHANGELOG.md  CITATION.cff  From Silos to Synergy Manuscript v1_in_progress.docx  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  styles.css
config/: protocol.yaml
data/: README.md
docs/: FLOW_FIGURE_CAPTIONS.md  FRONTEND_USAGE.md  METHODS_TRACEABILITY.md  RELEASE_NOTES_v1.0.0.md  REPRODUCIBILITY_CHECKLIST.md  SM1_PROTOCOL.md
notebooks/: README.md
scripts/: fetch_pubmed.py  generate_descriptive_table.py  generate_flow_prototypes.py  generate_interactive_sankey.py  run_api.py  run_pipeline.py
src/ai_dentistry/: __init__.py  __main__.py  affiliations.py  classification.py  config.py  funding.py  geography.py  network_metrics.py  pipeline.py  pubmed.py  role_flow.py  visualization.py
src/ai_dentistry/api/: __init__.py  app.py
tests/: test_affiliations.py  test_api.py  test_classification.py  test_config.py  test_funding.py  test_network_metrics.py  test_pipeline.py
